# sandbox-big-data-regz

./: .Rhistory  .gitignore  R.Rmd  README.md  ibis_narwhals_duckdb.py  main.py  mess_around.py  model.rds  modeltemp.rds  pyproject.toml  regz.Rmd  regz.nb.html
